show submenu on click by link

--- a/catalog.html
+++ b/catalog.html
@@ -32,44 +32,7 @@
                     <div class="filter-btn back-btn">
                     </div>
                     <ul class="components">
-                        <li>
-                            <a href="#" >Общепромышленная вентиляция</a>
-                        </li>
-                        <li>
-                            <a href="https://www.google.com/webhp?hl=ru&sa=X&ved=0ahUKEwi30dqp7vLiAhUt6KYKHf44CZIQPAgH">оборудование</a>
-                            <ul class="drop-menu">
-                                <li class="activeItem">
-                                    <a href="#">Вентиляторы дымоудаления </a>
-                                </li>
-                                <li>
-                                    <a href="#">Клапаны дымоудаления</a>
-                                </li>
-                                <li>
-                                    <a href="#">Клапаны огнезадерживающие</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#">Оборудование для монтажа вентиляторов</a>
-                        </li>
-                        <li>
-                            <a href="#">Кондиционеры центральные каркасные КЦК</a>
-                        </li>
-                        <li>
-                            <a href="">Сетевое оборудование</a>
-                            <ul class="drop-menu"><li> <a href="http://interconditioner.test-domain1.in.ua/category/catalog/setevoe-oborudovanie/uzly-prohoda-deflektory-zonty-dveri-shumoglushiteli/">Узлы прохода, дефлекторы, зонты, двери, шумоглушители</a></li><li> <a href="http://interconditioner.test-domain1.in.ua/category/catalog/setevoe-oborudovanie/klapany-i-zaslonki/">Клапаны и заслонки</a></li><li> <a href="http://interconditioner.test-domain1.in.ua/category/catalog/setevoe-oborudovanie/filtry-irp/">Фильтры, ИРП</a></li></ul>
-                        </li>
-                        <li >
-                            <a href="#">Автоматизация</a>
-                        </li>
-                        <li class="active-item">
-                            <a href="#">Отопительное оборудование</a>
-                        </li>
-                        <li>
-                            <a href="#">Скачать каталоги</a>
-                        </li>
-                    </ul>
-                </nav>
+                        <li class="withDropMenu"><a href="http://interconditioner.test-domain1.in.ua/category/catalog/obshhepromyshlennaya-ventilyaciya/">Общепромышленная вентиляция </a><ul class="drop-menu"><li> <a href="http://interconditioner.test-domain1.in.ua/category/catalog/obshhepromyshlennaya-ventilyaciya/ventilyatory-radialnye/">Вентиляторы радиальные</a></li><li> <a href="http://interconditioner.test-domain1.in.ua/category/catalog/obshhepromyshlennaya-ventilyaciya/ventilyatory-radialnye-pylevye/">Вентиляторы радиальные пылевые</a></li><li> <a href="http://interconditioner.test-domain1.in.ua/category/catalog/obshhepromyshlennaya-ventilyaciya/ventilyatory-osevye/">Вентиляторы осевые</a></li><li> <a href="http://interconditioner.test-domain1.in.ua/category/catalog/obshhepromyshlennaya-ventilyaciya/ventilyatory-kanalnye/">Вентиляторы канальные</a></li><li> <a href="http://interconditioner.test-domain1.in.ua/category/catalog/obshhepromyshlennaya-ventilyaciya/ventilyatory-kryshnye/">Вентиляторы крышные радиальные</a></li><li> <a href="http://interconditioner.test-domain1.in.ua/category/catalog/obshhepromyshlennaya-ventilyaciya/ustanovki-dlya-sistemy-podpora-vozduha/">Установки для системы подпора воздуха</a></li><li> <a href="http://interconditioner.test-domain1.in.ua/category/catalog/obshhepromyshlennaya-ventilyaciya/ustanovka-dlya-prinuditelnoj-ventilyacii/">Установка для принудительной вентиляции</a></li></ul></li><li class="withDropMenu opened"><a href="http://interconditioner.test-domain1.in.ua/category/catalog/protivopozharnoe-oborudovanie/">Противопожарное оборудование </a><ul class="drop-menu show"><li class="activeItem"> <a href="http://interconditioner.test-domain1.in.ua/category/catalog/protivopozharnoe-oborudovanie/ventilyatory-dymoudaleniya/">Вентиляторы дымоудаления</a></li><li> <a href="http://interconditioner.test-domain1.in.ua/category/catalog/protivopozharnoe-oborudovanie/ustanovka-dlya-sistemy-podpora-vozduha-protivopozharnoe-oborudovanie/">Установка для системы подпора воздуха</a></li><li> <a href="http://interconditioner.test-domain1.in.ua/category/catalog/protivopozharnoe-oborudovanie/klapany-dymoudaleniya/">Клапаны дымоудаления</a></li><li> <a href="http://interconditioner.test-domain1.in.ua/category/catalog/protivopozharnoe-oborudovanie/klapany-ognezaderzhivajushhie/">Клапаны огнезадерживающие</a></li></ul></li><li class="withDropMenu"><a href="http://interconditioner.test-domain1.in.ua/category/catalog/oborudovanie-dlya-montazha-ventilyatorov/">Оборудование для монтажа вентиляторов </a><ul class="drop-menu"><li> <a href="http://interconditioner.test-domain1.in.ua/category/catalog/oborudovanie-dlya-montazha-ventilyatorov/stakany/">Стаканы, клапаны АЗЕ 034, поддоны</a></li><li> <a href="http://interconditioner.test-domain1.in.ua/category/catalog/oborudovanie-dlya-montazha-ventilyatorov/vibroizolyatory-i-gibkie-vstavki/">Виброизоляторы и гибкие вставки</a></li></ul></li><li><a href="http://interconditioner.test-domain1.in.ua/category/catalog/kondicionery-centralnye-karkasnye-kck/">Кондиционеры центральные каркасные КЦК, КЦК-М, КТЦ-3 </a></li><li class="withDropMenu"><a href="http://interconditioner.test-domain1.in.ua/category/catalog/setevoe-oborudovanie/">Сетевое оборудование </a><ul class="drop-menu"><li> <a href="http://interconditioner.test-domain1.in.ua/category/catalog/setevoe-oborudovanie/klapany-i-zaslonki/">Клапаны и заслонки</a></li><li> <a href="http://interconditioner.test-domain1.in.ua/category/catalog/setevoe-oborudovanie/uzly-prohoda-deflektory-zonty-dveri-shumoglushiteli/">Узлы прохода, дефлекторы, зонты, двери, шумоглушители</a></li><li> <a href="http://interconditioner.test-domain1.in.ua/category/catalog/setevoe-oborudovanie/filtry-irp/">Фильтры, ИРП</a></li></ul></li><li class="withDropMenu"><a href="http://interconditioner.test-domain1.in.ua/category/catalog/otopitelnoe-oborudovanie/">Отопительное оборудование </a><ul class="drop-menu"><li> <a href="http://interconditioner.test-domain1.in.ua/category/catalog/otopitelnoe-oborudovanie/agregaty-vozdushno-otopitelnye/">Агрегаты воздушно-отопительные</a></li><li> <a href="http://interconditioner.test-domain1.in.ua/category/catalog/otopitelnoe-oborudovanie/vozduhonagrevatel/">Воздухонагреватель</a></li></ul></li><li class="withDropMenu"><a href="http://interconditioner.test-domain1.in.ua/category/catalog/avtomatizaciya/">Автоматизация </a><ul class="drop-menu"><li> <a href="http://interconditioner.test-domain1.in.ua/category/catalog/avtomatizaciya/avtomatika-i-upravlenie-dlya-kondicionerov-kck/">Автоматика и управление для кондиционеров КЦК</a></li><li> <a href="http://interconditioner.test-domain1.in.ua/category/catalog/avtomatizaciya/bloki-upravleniya-otopitelnymi-agregatami/">Блоки управления отопительными агрегатами</a></li></ul></li><li><a href="http://interconditioner.test-domain1.in.ua/category/catalog/skachat-katalogi/">Скачать каталоги </a></li></ul>                    </nav>
             </div>
             <div class="col-md-8 col-lg-9">
                 <div class="container">
