video tag for the page about

--- a/about.html
+++ b/about.html
@@ -15,7 +15,12 @@
 <body>
 <main class="about">
     <div class="about-banner">
+
+<!--        todo: hide img/video dynamically-->
         <img src="media/about-banner.png" alt="">
+        <div class="video-wrap">
+            <video loop muted autoplay src="media/video_1080p.mp4"></video>
+        </div>
     </div>
     <nav>
         <ul>
