background style for mobile (about page)

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
         </ul>
     </nav>
     <div class="container">
-        <div class="row">
+        <div class="row text-row">
             <div class="col-lg-8 offset-lg-2">
                 <h2>ЧАО «Интеркондиционер» - предприятие новой Украины, является крупнейшим производителем кондиционеров, систем промышленной вентиляции и кондиционирования,
                     дымоудаления,
