--- a/about.html
+++ b/about.html
@@ -221,12 +221,7 @@
 </header>
 <main class="about">
     <div class="about-banner">
-
-<!--        todo: hide img/video dynamically-->
         <img src="media/about-banner.png" alt="">
-<!--        <div class="video-wrap">-->
-<!--            <video loop muted autoplay src="media/video_1080p.mp4"></video>-->
-<!--        </div>-->
     </div>
     <nav>
         <ul>
@@ -238,85 +233,88 @@
             <li><a href="">Вакансии</a></li>
         </ul>
     </nav>
-<!--    <div class="container">-->
-<!--        <div class="row text-row">-->
-<!--            <div class="col-lg-8 offset-lg-2">-->
-<!--                <h2>ЧАО «Интеркондиционер» - предприятие новой Украины, является крупнейшим производителем кондиционеров, систем промышленной вентиляции и кондиционирования,-->
-<!--                    дымоудаления,-->
-<!--                    воздушного отопления и выполняет работы по изготовлению промышленного вентиляционного оборудования, его наладке и технического обслуживания.</h2>-->
-<!--                <p>Тысячи заказчиков в Украине и за рубежом приобретают наше оборудование благодаря высокому качеству, минимальным срокам изготовления, простоте в монтаже и-->
-<!--                    обслуживании.</p>-->
-<!--            </div>-->
-<!--        </div>-->
+    <div class="container">
+        <div class="row text-row">
+            <div class="col-lg-8 offset-lg-2">
+                <div class="video-wrap">
+                    <video loop muted src="media/video_1080p.mp4"></video>
+                </div>
+                <h2>ЧАО «Интеркондиционер» - предприятие новой Украины, является крупнейшим производителем кондиционеров, систем промышленной вентиляции и кондиционирования,
+                    дымоудаления,
+                    воздушного отопления и выполняет работы по изготовлению промышленного вентиляционного оборудования, его наладке и технического обслуживания.</h2>
+                <p>Тысячи заказчиков в Украине и за рубежом приобретают наше оборудование благодаря высокому качеству, минимальным срокам изготовления, простоте в монтаже и <a href="">lololo</a>
+                    обслуживании.</p>
+            </div>
+        </div>
 
-<!--        <div class="about-slider">-->
-<!--            <div>-->
-<!--                <a data-fancybox="aboutGallery" href="media/about-img1.png">-->
-<!--                    <img src="media/about-img1.png" alt="">-->
-<!--                </a>-->
-<!--            </div>-->
-<!--            <div>-->
-<!--                <a data-fancybox="aboutGallery" href="media/about-img2.png">-->
-<!--                    <img src="media/about-img2.png" alt="">-->
-<!--                </a>-->
-<!--            </div>-->
-<!--            <div>-->
-<!--                <a data-fancybox="aboutGallery" href="media/about-img3.png">-->
-<!--                    <img src="media/about-img3.png" alt="">-->
-<!--                </a>-->
-<!--            </div>-->
-<!--            <div>-->
-<!--                <a data-fancybox="aboutGallery" href="media/about-img4.png">-->
-<!--                    <img src="media/about-img4.png" alt="">-->
-<!--                </a>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div class="about-slider-arrows banner_paginator">-->
-<!--            <div class="prev">-->
-<!--                        <span class="link&#45;&#45;arrowed">-->
-<!--                            <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">-->
-<!--                                <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">-->
-<!--                                    <circle class="arrow-icon&#45;&#45;circle" cx="16" cy="16" r="15.12"></circle>-->
-<!--                                    <path class="arrow-icon&#45;&#45;arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>-->
-<!--                                </g>-->
-<!--                            </svg>-->
-<!--                        </span>-->
-<!--            </div>-->
-<!--            <div class="next">-->
-<!--                        <span class="link&#45;&#45;arrowed">-->
-<!--                            <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">-->
-<!--                                <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">-->
-<!--                                    <circle class="arrow-icon&#45;&#45;circle" cx="16" cy="16" r="15.12"></circle>-->
-<!--                                    <path class="arrow-icon&#45;&#45;arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>-->
-<!--                                </g>-->
-<!--                            </svg>-->
-<!--                        </span>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--    <div class="history">-->
-<!--        <div class="container">-->
-<!--            <h1>История и характеристика предприятия</h1>-->
-<!--            <div class="row">-->
-<!--                <div class="col-lg-8 offset-lg-2">-->
-<!--                    <p>ЧАО «Интеркондиционер» создано в 1996 году, располагается в промышленной зоне крупнейшего индустриального города Украины – Харькова. На площади 1,5 га.-->
-<!--                        построено три-->
-<!--                        современных производственных корпуса и пять зданий для обслуживания, общей площадью более 10000 м2. </p>-->
-<!--                    <p>Производство кондиционеров, систем промышленной вентиляции и кондиционирования, дымоудаления, воздушного отопленияСовременный дизайн, высокая культура,-->
-<!--                        новейшее-->
-<!--                        прогрессивное оборудование, внедрение системы управления качеством ISO 9001-2001 в 2008г., создание превосходных условий для работников дало возможность-->
-<!--                        выпускать-->
-<!--                        системы промышленной вентиляции, кондиционирования, дымоудаления и воздушного отопления, получивших признание в Украине и за рубежом, отмеченную множеством-->
-<!--                        дипломов-->
-<!--                        и наград. Вся продукция сертифицирована. Наличие мощной производственной и научно-технической базы, современные технологии дают возможность выпускать-->
-<!--                        продукцию,-->
-<!--                        удовлетворяющую запросы монтажных, проектных, строительных организаций и других потребителей всех отраслей народного хозяйства.</p>-->
-<!--                    <img src="media/about-img4.png" alt="">-->
-<!--                </div>-->
-<!--            </div>-->
+        <div class="about-slider">
+            <div>
+                <a data-fancybox="aboutGallery" href="media/about-img1.png">
+                    <img src="media/about-img1.png" alt="">
+                </a>
+            </div>
+            <div>
+                <a data-fancybox="aboutGallery" href="media/about-img2.png">
+                    <img src="media/about-img2.png" alt="">
+                </a>
+            </div>
+            <div>
+                <a data-fancybox="aboutGallery" href="media/about-img3.png">
+                    <img src="media/about-img3.png" alt="">
+                </a>
+            </div>
+            <div>
+                <a data-fancybox="aboutGallery" href="media/about-img4.png">
+                    <img src="media/about-img4.png" alt="">
+                </a>
+            </div>
+        </div>
+        <div class="about-slider-arrows banner_paginator">
+            <div class="prev">
+                        <span class="link--arrowed">
+                            <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                                <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
+                                    <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
+                                    <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
+                                </g>
+                            </svg>
+                        </span>
+            </div>
+            <div class="next">
+                        <span class="link--arrowed">
+                            <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                                <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
+                                    <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
+                                    <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
+                                </g>
+                            </svg>
+                        </span>
+            </div>
+        </div>
+    </div>
+    <div class="history">
+        <div class="container">
+            <h1>История и характеристика предприятия</h1>
+            <div class="row">
+                <div class="col-lg-8 offset-lg-2">
+                    <p>ЧАО «Интеркондиционер» создано в 1996 году, располагается в промышленной зоне крупнейшего индустриального города Украины – Харькова. На площади 1,5 га.
+                        построено три <a href="http://google.com.ua">lololo</a>
+                        современных производственных корпуса и пять зданий для обслуживания, общей площадью более 10000 м2. </p>
+                    <p>Производство кондиционеров, систем промышленной вентиляции и кондиционирования, дымоудаления, воздушного отопленияСовременный дизайн, высокая культура,
+                        новейшее
+                        прогрессивное оборудование, внедрение системы управления качеством ISO 9001-2001 в 2008г., создание превосходных условий для работников дало возможность
+                        выпускать
+                        системы промышленной вентиляции, кондиционирования, дымоудаления и воздушного отопления, получивших признание в Украине и за рубежом, отмеченную множеством
+                        дипломов
+                        и наград. Вся продукция сертифицирована. Наличие мощной производственной и научно-технической базы, современные технологии дают возможность выпускать
+                        продукцию,
+                        удовлетворяющую запросы монтажных, проектных, строительных организаций и других потребителей всех отраслей народного хозяйства.</p>
+                    <img src="media/about-img4.png" alt="">
+                </div>
+            </div>
 
-<!--        </div>-->
-<!--    </div>-->
+        </div>
+    </div>
 </main>
 <footer>
     <div class="container">
