--- a/index.html
+++ b/index.html
@@ -185,7 +185,8 @@
             <!--            <div class="form-wrap">-->
             <div class="contact-form" id="contact-form-header">
 
-                <p>Вы можете задать вопрос, заполнив форму, и наши менеджеры ответят вам в самое ближайшее время!</p>
+                <p>Вы можете задать вопрос, заполнив форму, и наши менеджеры ответят вам в самое ближайшее время!
+                    <a href="https://www.google.com.ua">test link</a></p>
                 <span class="form-btn">
             </span>
                 <form action="">
