--- a/news-item.html
+++ b/news-item.html
@@ -36,7 +36,7 @@
                     через ответвления к отключенным вентиляторам (от ответлений отключенных вентиляторов) при присоединении откключенных вентиляторов к коллекторам.</p>
                 <p>Клапаны рассчитаны на эксплуатацию в районах с умеренным (У) климатом категории размещения 3 по ГОСТ 15150. При установке клапанов в вертикальном воздуховоде
                     поток воздуха должен быть направлен снизу вверх. Установка клапанов в сети допускается при скоростях движения воздуха на горизонтальных участках V≥ 5м/с и на
-                    вертикальных V≥4 м/с. </p>
+                    вертикальных V≥4 м/с. </p> <a href=""> lolo</a>
                 <p>Клапаны обратные КО.100 применяются в системах вентиляции с рабочим давлением до 800 Па.</p>
                 <div class="news-img">
                     <div>
