--- a/product.html
+++ b/product.html
@@ -27,45 +27,35 @@
                     <div class="preview-slider">
                         <div>
                             <a href="media/main-banner-img.png"
-                               data-fancybox
-                               data-caption=""
-                               data-type="image"
+                               data-fancybox="product"
                                class="review-thumb">
                                 <img src="media/main-banner-img.png" alt="">
                             </a>
                         </div>
                         <div>
                             <a href="media/home-catalog/4.png"
-                               data-fancybox
-                               data-caption=""
-                               data-type="image"
+                               data-fancybox="product"
                                class="review-thumb">
                                 <img src="media/home-catalog/4.png" alt="">
                             </a>
                         </div>
                         <div>
                             <a href="media/main-banner-img.png"
-                               data-fancybox
-                               data-caption=""
-                               data-type="image"
+                               data-fancybox="product"
                                class="review-thumb">
                                 <img src="media/main-banner-img.png" alt="">
                             </a>
                         </div>
                         <div>
                             <a href="media/home-catalog/4.png"
-                               data-fancybox
-                               data-caption=""
-                               data-type="image"
+                               data-fancybox="product"
                                class="review-thumb">
                                 <img src="media/home-catalog/4.png" alt="">
                             </a>
                         </div>
                         <div>
                             <a href="media/main-banner-img.png"
-                               data-fancybox
-                               data-caption=""
-                               data-type="image"
+                               data-fancybox="product"
                                class="review-thumb">
                                 <img src="media/main-banner-img.png" alt="">
                             </a>
@@ -123,7 +113,7 @@
             <div class="tab-content" id="productContent">
                 <div class="tab-pane fade show active" id="a" role="tabpanel" aria-labelledby="a">
                     <h3>Типы кондиционеров центральных каркасных (приточных, приточно-вытяжных установок):</h3>
-                    <p>- Кондиционеры КЦК-1,6, КЦК-3,15, КЦК-5, КЦК-6,3, КЦК-8-1, КЦК-8-2, КЦК-10, КЦК-12,5, КЦК-16, КЦК-20; КЦК-25; КЦК-31,5; КЦК-40; - Вертикальные кондиционеры
+                    <p>- Кондиционеры КЦК-1,6, КЦК-3,15, КЦК-5, КЦК-6,3, КЦК-8-1, КЦК-8-2, КЦК-10, КЦК-12,5, КЦК-16, КЦК-20; КЦК-25; КЦК-31,5; КЦК-40; - Вертикальные кондиционеры <a href="">erwe</a>
                         КЦКВ-1,6, КЦКВ-3,15, КЦКВ-5, КЦКВ-6,3, КЦКВ-8-1, КЦКВ-8-2, КЦКВ-10; - Наружные кондиционеры КЦКЗ-1,6, КЦКЗ-3,15, КЦКЗ-5, КЦКЗ-6,3, КЦКЗ-8-1, КЦКЗ-8-2,
                         КЦКЗ-10, КЦКЗ-12,5, КЦКЗ-16, КЦКЗ-20; КЦКЗ-25; КЦКЗ-31,5; КЦКЗ-40; - Кондиционеры для медицинских учреждений КЦКМ-1,6, КЦКМ-3,15, КЦКМ-5, КЦКМ-6,3,
                         КЦКМ-8-1, КЦКМ-8-2, КЦКМ-10, КЦКМ-12,5, КЦКМ-16, КЦКМ-20; - Подвесные кондиционеры КЦКП-1,5, КЦКП-2, КЦКП-3, КЦКП-4, а также оборудование, из которого они
@@ -202,7 +192,9 @@
                     <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                         <div class="card-body tab-content">
                             <h3>Типы кондиционеров центральных каркасных (приточных, приточно-вытяжных установок):</h3>
-                            <p>- Кондиционеры КЦК-1,6, КЦК-3,15, КЦК-5, КЦК-6,3, КЦК-8-1, КЦК-8-2, КЦК-10, КЦК-12,5, КЦК-16, КЦК-20; КЦК-25; КЦК-31,5; КЦК-40; - Вертикальные кондиционеры
+                            <p> - Кондиционеры КЦК-1,6, КЦК-3,15, КЦК-5, КЦК-6,3, КЦК-8-1, КЦК-8-2, КЦК-10, КЦК-12,5, КЦК-16, КЦК-20; КЦК-25; КЦК-31,5; КЦК-40; - Вертикальные
+                                кондиционеры
+
                                 КЦКВ-1,6, КЦКВ-3,15, КЦКВ-5, КЦКВ-6,3, КЦКВ-8-1, КЦКВ-8-2, КЦКВ-10; - Наружные кондиционеры КЦКЗ-1,6, КЦКЗ-3,15, КЦКЗ-5, КЦКЗ-6,3, КЦКЗ-8-1, КЦКЗ-8-2,
                                 КЦКЗ-10, КЦКЗ-12,5, КЦКЗ-16, КЦКЗ-20; КЦКЗ-25; КЦКЗ-31,5; КЦКЗ-40; - Кондиционеры для медицинских учреждений КЦКМ-1,6, КЦКМ-3,15, КЦКМ-5, КЦКМ-6,3,
                                 КЦКМ-8-1, КЦКМ-8-2, КЦКМ-10, КЦКМ-12,5, КЦКМ-16, КЦКМ-20; - Подвесные кондиционеры КЦКП-1,5, КЦКП-2, КЦКП-3, КЦКП-4, а также оборудование, из которого они
